--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -10,7 +10,8 @@
         android:id="@+id/image_grid"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:numColumns="auto_fit" android:columnWidth="100dp"
+        android:numColumns="auto_fit"
+        android:columnWidth="100dp"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="spacingWidthUniform"
