--- a/app/src/main/res/layout/activity_line_chart_.xml
+++ b/app/src/main/res/layout/activity_line_chart_.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BarChart_Activity">
+    tools:context=".LineChart_Activity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_bar_chart_" />
+    <include layout="@layout/content_line_chart_" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -28,12 +28,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_save" />
-
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/mp_BarChart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.github.mikephil.charting.charts.BarChart>
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/mp_Line_Chart"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
